# BoxNesting

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  clang_format.sh
SERVER_VERSION/: AdjacencyMatrix.hpp  Algorithm.cpp  Algorithm.hpp  BipartiteGraph.hpp  Box.hpp  Parser.cpp  Parser.hpp  Vertex.hpp  main.cpp
cmake/: catch.cmake  check.cmake  clang_format.cmake  clang_tidy.cmake  code.cmake  coverage.cmake  flawfinder.cmake  sanitise.cmake  version.cmake  version.hpp.in  version_header.cmake
doxygen/: CMakeLists.txt  doxyfile.in
include/BoxNesting/: Algorithm.hpp  Box.hpp  Parser.hpp
include/Graph/: AdjacencyMatrix.hpp  BipartiteGraph.hpp  BipartiteGraph.ipp  Graph.hpp  Graph.ipp  Vertex.hpp  Vertex.ipp
include/box_nesting/: Algorithm.hpp  Box.hpp  Parser.hpp  ParserError.hpp  base.hpp  derived.hpp
include/graph/: Edge.hpp  Edge.ipp  Graph.hpp  Graph.ipp  Vertex.hpp  Vertex.ipp
src/: AdjacencyMatrix.hpp  Algorithm.cpp  Algorithm.hpp  BipartiteGraph.hpp  Box.cpp  Box.hpp  CMakeLists.txt  HopcroftKarpAlgorithm.cpp  HopcroftKarpAlgorithm.hpp  KuhnAlgorithm.cpp  KuhnAlgorithm.hpp  Parser.cpp  Parser.hpp  ParserError.hpp  Vertex.hpp  derived.cpp  main.cpp  version.hpp
test/: Algorithm.cpp  BipartiteGraph.cpp  Box.cpp  CMakeLists.txt  Graph.cpp  HopcroftKarpAlgorithm.cpp  KuhnAlgorithm.cpp  Parser.cpp  derived.cpp
